refactor: 使用Collections.emptyMap()替代Map.of()初始化空映射
优化代码可读性，明确表示这是一个不可变的空映射，同时保持原有功能不变